PCI8154/Library/Include/pci_8154.h

#define _P8154_1_H
#define _MYWIN32
#define FNTYPE PASCAL
// System Section 6.3
I16 FNTYPE _8154_initial(U16 *CardID_InBit, I16 Manual_ID);
I16 FNTYPE _8154_close(void);
I16 FNTYPE _8154_get_version(I16 CardId, I16 *firmware_ver, I32 *driver_ver, I32 *dll_ver);
I16 FNTYPE _8154_set_security_key(I16 CardId, I16 old_secu_code, I16 new_secu_code);
I16 FNTYPE _8154_check_security_key(I16 CardId, I16 secu_code);
I16 FNTYPE _8154_reset_security_key(I16 CardId);
I16 FNTYPE _8154_config_from_file();
I16 FNTYPE _8154_get_DBboard_type(I16 CardId, I16 *DBtype);
//Pulse Input/Output Configuration Section 6.4
I16 FNTYPE _8154_set_pls_outmode(I16 AxisNo, I16 pls_outmode);
I16 FNTYPE _8154_set_pls_iptmode(I16 AxisNo, I16 pls_iptmode, I16 pls_logic);
I16 FNTYPE _8154_set_feedback_src(I16 AxisNo, I16 Src);
//Velocity mode motion Section 6.5
I16 FNTYPE _8154_tv_move(I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc);
I16 FNTYPE _8154_sv_move(I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc, F64 SVacc);
I16 FNTYPE _8154_sd_stop(I16 AxisNo, F64 Tdec);
I16 FNTYPE _8154_emg_stop(I16 AxisNo);
I16 FNTYPE _8154_get_current_speed(I16 AxisNo, F64 *speed);
I16 FNTYPE _8154_speed_override(I16 CAxisNo, F64 NewVelPercent, F64 Time);
I16 FNTYPE _8154_speed_override2(I16 CAxisNo, F64 NewVel, F64 Time);
I16 FNTYPE _8154_set_max_override_speed(I16 AxisNo, F64 OvrdSpeed, I16 Enable);
//Single Axis Position Mode Section 6.6
I16 FNTYPE _8154_start_tr_move(I16 AxisNo, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_ta_move(I16 AxisNo, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_sr_move(I16 AxisNo, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_start_sa_move(I16 AxisNo, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_set_move_ratio(I16 AxisNo, F64 move_ratio);
I16 FNTYPE _8154_position_override(I16 AxisNo, F64 NewPos);
//Linear Interpolated Motion Section 6.7
  // Two Axes Linear Interpolation function
I16 FNTYPE _8154_start_tr_move_xy(I16 CardId, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_tr_move_zu(I16 CardId, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_ta_move_xy(I16 CardId, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_ta_move_zu(I16 CardId, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_sr_move_xy(I16 CardId, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_start_sr_move_zu(I16 CardId, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_start_sa_move_xy(I16 CardId, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_start_sa_move_zu(I16 CardId, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
//Any 2 of former or later 4 axes linear interpolation function
I16 FNTYPE _8154_start_tr_line2(I16 *AxisArray, F64 *DistArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_ta_line2(I16 *AxisArray, F64 *PosArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_sr_line2(I16 *AxisArray, F64 *DistArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_start_sa_line2(I16 *AxisArray, F64 *PosArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
//Any 3 of former or later 4 axes linear interpolation function
I16 FNTYPE _8154_start_tr_line3(I16 *AxisArray, F64 *DistArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_ta_line3(I16 *AxisArray, F64 *PosArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_sr_line3(I16 *AxisArray, F64 *DistArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_start_sa_line3(I16 *AxisArray, F64 *PosArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
//Former or later 4 Axes linear interpolation function
I16 FNTYPE _8154_start_tr_line4(I16 *AxisArray, F64 *DistArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_ta_line4(I16 *AxisArray, F64 *PosArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_sr_line4(I16 *AxisArray, F64 *DistArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_start_sa_line4(I16 *AxisArray, F64 *PosArray, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);