PCI8154/Library/Include/pci_8154.bas

Attribute VB_Name = "Module1"
' Copyright (C) 1995-2009 ADLINK Technology INC. All rights reserved.
Option Explicit
'
' #ifndef _P8154_1_H
' #define _P8154_1_H
'
' #define _MYWIN32
'
' #include "type_def.h"
'
' #ifdef __cplusplus
' extern "C" {
' #endif
'
' #ifdef _MYWIN32
' #define FNTYPE PASCAL
' #endif
'
'  System Section 6.3
Declare Function B_8154_initial Lib "8154.dll" Alias "_8154_initial" (CardID_InBit As Integer, ByVal Manual_ID As Integer) As Integer
Declare Function B_8154_close Lib "8154.dll" Alias "_8154_close" () As Integer
Declare Function B_8154_get_version Lib "8154.dll" Alias "_8154_get_version" (ByVal CardId As Integer, firmware_ver As Integer, driver_ver As Long, dll_ver As Long) As Integer
Declare Function B_8154_set_security_key Lib "8154.dll" Alias "_8154_set_security_key" (ByVal CardId As Integer, ByVal old_secu_code As Integer, ByVal new_secu_code As Integer) As Integer
Declare Function B_8154_check_security_key Lib "8154.dll" Alias "_8154_check_security_key" (ByVal CardId As Integer, ByVal secu_code As Integer) As Integer
Declare Function B_8154_reset_security_key Lib "8154.dll" Alias "_8154_reset_security_key" (ByVal CardId As Integer) As Integer
Declare Function B_8154_config_from_file Lib "8154.dll" Alias "_8154_config_from_file" () As Integer
Declare Function B_8154_get_DBboard_type Lib "8154.dll" Alias "_8154_get_DBboard_type" (ByVal CardId As Integer, DBtype As Integer) As Integer
'
' Pulse Input/Output Configuration Section 6.4
Declare Function B_8154_set_pls_outmode Lib "8154.dll" Alias "_8154_set_pls_outmode" (ByVal AxisNo As Integer, ByVal pls_outmode As Integer) As Integer
Declare Function B_8154_set_pls_iptmode Lib "8154.dll" Alias "_8154_set_pls_iptmode" (ByVal AxisNo As Integer, ByVal pls_iptmode As Integer, ByVal pls_logic As Integer) As Integer
Declare Function B_8154_set_feedback_src Lib "8154.dll" Alias "_8154_set_feedback_src" (ByVal AxisNo As Integer, ByVal Src As Integer) As Integer
'
' Velocity mode motion Section 6.5
Declare Function B_8154_tv_move Lib "8154.dll" Alias "_8154_tv_move" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8154_sv_move Lib "8154.dll" Alias "_8154_sv_move" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal SVacc As Double) As Integer
Declare Function B_8154_sd_stop Lib "8154.dll" Alias "_8154_sd_stop" (ByVal AxisNo As Integer, ByVal Tdec As Double) As Integer
Declare Function B_8154_emg_stop Lib "8154.dll" Alias "_8154_emg_stop" (ByVal AxisNo As Integer) As Integer
Declare Function B_8154_get_current_speed Lib "8154.dll" Alias "_8154_get_current_speed" (ByVal AxisNo As Integer, speed As Double) As Integer
Declare Function B_8154_speed_override Lib "8154.dll" Alias "_8154_speed_override" (ByVal CAxisNo As Integer, ByVal NewVelPercent As Double, ByVal Time As Double) As Integer
Declare Function B_8154_speed_override2 Lib "8154.dll" Alias "_8154_speed_override2" (ByVal CAxisNo As Integer, ByVal NewVel As Double, ByVal Time As Double) As Integer
Declare Function B_8154_set_max_override_speed Lib "8154.dll" Alias "_8154_set_max_override_speed" (ByVal AxisNo As Integer, ByVal OvrdSpeed As Double, ByVal enable As Integer) As Integer
'
' Single Axis Position Mode Section 6.6
Declare Function B_8154_start_tr_move Lib "8154.dll" Alias "_8154_start_tr_move" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_ta_move Lib "8154.dll" Alias "_8154_start_ta_move" (ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_sr_move Lib "8154.dll" Alias "_8154_start_sr_move" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sa_move Lib "8154.dll" Alias "_8154_start_sa_move" (ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_set_move_ratio Lib "8154.dll" Alias "_8154_set_move_ratio" (ByVal AxisNo As Integer, ByVal move_ratio As Double) As Integer
Declare Function B_8154_position_override Lib "8154.dll" Alias "_8154_position_override" (ByVal AxisNo As Integer, ByVal NewPos As Double) As Integer
'
' Linear Interpolated Motion Section 6.7
'  Two Axes Linear Interpolation function
Declare Function B_8154_start_tr_move_xy Lib "8154.dll" Alias "_8154_start_tr_move_xy" (ByVal CardId As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_tr_move_zu Lib "8154.dll" Alias "_8154_start_tr_move_zu" (ByVal CardId As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
'
Declare Function B_8154_start_ta_move_xy Lib "8154.dll" Alias "_8154_start_ta_move_xy" (ByVal CardId As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_ta_move_zu Lib "8154.dll" Alias "_8154_start_ta_move_zu" (ByVal CardId As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
'
Declare Function B_8154_start_sr_move_xy Lib "8154.dll" Alias "_8154_start_sr_move_xy" (ByVal CardId As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sr_move_zu Lib "8154.dll" Alias "_8154_start_sr_move_zu" (ByVal CardId As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
Declare Function B_8154_start_sa_move_xy Lib "8154.dll" Alias "_8154_start_sa_move_xy" (ByVal CardId As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sa_move_zu Lib "8154.dll" Alias "_8154_start_sa_move_zu" (ByVal CardId As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
' Any 2 of former or later 4 axes linear interpolation function
Declare Function B_8154_start_tr_line2 Lib "8154.dll" Alias "_8154_start_tr_line2" (AxisArray As Integer, DistArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_ta_line2 Lib "8154.dll" Alias "_8154_start_ta_line2" (AxisArray As Integer, PosArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_sr_line2 Lib "8154.dll" Alias "_8154_start_sr_line2" (AxisArray As Integer, DistArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sa_line2 Lib "8154.dll" Alias "_8154_start_sa_line2" (AxisArray As Integer, PosArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
' Any 3 of former or later 4 axes linear interpolation function
Declare Function B_8154_start_tr_line3 Lib "8154.dll" Alias "_8154_start_tr_line3" (AxisArray As Integer, DistArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_ta_line3 Lib "8154.dll" Alias "_8154_start_ta_line3" (AxisArray As Integer, PosArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_sr_line3 Lib "8154.dll" Alias "_8154_start_sr_line3" (AxisArray As Integer, DistArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sa_line3 Lib "8154.dll" Alias "_8154_start_sa_line3" (AxisArray As Integer, PosArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
' Former or later 4 Axes linear interpolation function
Declare Function B_8154_start_tr_line4 Lib "8154.dll" Alias "_8154_start_tr_line4" (AxisArray As Integer, DistArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_ta_line4 Lib "8154.dll" Alias "_8154_start_ta_line4" (AxisArray As Integer, PosArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_sr_line4 Lib "8154.dll" Alias "_8154_start_sr_line4" (AxisArray As Integer, DistArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sa_line4 Lib "8154.dll" Alias "_8154_start_sa_line4" (AxisArray As Integer, PosArray As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
' /*
' I16 FNTYPE _8154_tv_line2(I16 *AxisArray, F64 StrVel, F64 MaxVel, F64 Tacc);
' I16 FNTYPE _8154_sv_line2(I16 *AxisArray,  F64 StrVel, F64 MaxVel, F64 Tacc, F64 SVacc);
